# binaryCameraRecorder

./: .gitignore  CMakeLists.txt  CmakeListsApp.txt  coordinates.py  env.sh  readme.md  readme.txt
gstreamer/subprojects/gst-plugins-bad/gst-libs/gst/analytics/: analytics.h
gstreamer/subprojects/gst-plugins-bad/sys/applemedia/: avfdeviceprovider.h  avfdeviceprovider.m  avfvideosrc.m
gstreamer/subprojects/gst-plugins-bad/sys/va/: gstvadevice.h
gstreamer/subprojects/gst-plugins-base/tests/validate/videorate/fill_segment_after_caps_changed_before_eos/flow-expectations/: log-videorate-sink-expected
handlers/recording/: gstrecording.cpp  gstrecording.h
handlers/screenshot/: gstscreenshot.cpp
handlers/streaming/: gststreaming.cpp  gststreaming.h  gststreamingTemp.cpp
include/: command_handler.h  deskew_handler.h  preview_handler.h
plugins/recording_plugin/: gstopencvperspective.cpp  gstopencvperspective.h  gstrecording.cpp  gstrecording.h
release-v3.0.1/: checksum  ios_stream  pipe_to_rtp  scrcpymz
release-v3.0.1/gst/: gst-device-lookup  gst-multi-rtp  gst-transform  record_to_file
src/: command_handler.cpp  deskew_handler.cpp  main.cpp  preview_handler.cpp
