cmake_minimum_required(VERSION 3.10)
project(binaryCameraRecorder)
set(CMAKE_CXX_STANDARD 17)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GST REQUIRED gstreamer-1.0 gstreamer-video-1.0 gstreamer-app-1.0 gstreamer-audio-1.0)
include_directories(${GST_INCLUDE_DIRS} /usr/local/include/gstreamer-1.0 /usr/local/include/glib-2.0 /usr/local/lib/glib-2.0/include include plugins/recording_plugin)
link_directories(${GST_LIBRARY_DIRS} /usr/local/lib)
set(SOURCES src/main.cpp src/command_handler.cpp src/preview_handler.cpp plugins/recording_plugin/gstrecording.cpp)
add_executable(recording_app ${SOURCES})
target_link_libraries(recording_app ${GST_LIBRARIES} gstvideo-1.0 gstaudio-1.0 gstapp-1.0 glib-2.0 gobject-2.0)
if(APPLE)
    find_library(COCOA_LIBRARY Cocoa)
    find_library(COREVIDEO_LIBRARY CoreVideo)
    find_library(COREAUDIO_LIBRARY CoreAudio)
    target_link_libraries(recording_app ${COCOA_LIBRARY} ${COREVIDEO_LIBRARY} ${COREAUDIO_LIBRARY})
    set(CMAKE_OSX_ARCHITECTURES "arm64")
endif()
